@@ -9,20 +9,23 @@ import static com.br.sobieskiproducoes.geradormateriasjoomla.utils.MateriaUtils.
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.logging.Level;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
 
-import com.br.sobieskiproducoes.geradormateriasjoomla.chatgpt.consumer.response.ChoicesDTO;
-import com.br.sobieskiproducoes.geradormateriasjoomla.chatgpt.consumer.response.RepostaResponseDTO;
+import com.aspose.html.converters.Converter;
 import com.br.sobieskiproducoes.geradormateriasjoomla.chatgpt.service.ChatGPTService;
 import com.br.sobieskiproducoes.geradormateriasjoomla.config.properties.ChatGPTProperties;
 import com.br.sobieskiproducoes.geradormateriasjoomla.dto.StatusProcessamentoEnum;
@@ -30,9 +33,6 @@ import com.br.sobieskiproducoes.geradormateriasjoomla.fontedados.dto.YoutubeVide
 import com.br.sobieskiproducoes.geradormateriasjoomla.mapaperguntas.repository.MapaPerguntaRepository;
 import com.br.sobieskiproducoes.geradormateriasjoomla.materia.controller.dto.PropostaMateriaDTO;
 import com.br.sobieskiproducoes.geradormateriasjoomla.materia.controller.dto.SugerirMateriaDTO;
-import com.br.sobieskiproducoes.geradormateriasjoomla.materia.model.CategoriaEntity;
-import com.br.sobieskiproducoes.geradormateriasjoomla.materia.model.MateriaEntity;
-import com.br.sobieskiproducoes.geradormateriasjoomla.materia.model.TagEntity;
 import com.br.sobieskiproducoes.geradormateriasjoomla.materia.repository.CategoriaRepository;
 import com.br.sobieskiproducoes.geradormateriasjoomla.materia.repository.MateriaRepository;
 import com.br.sobieskiproducoes.geradormateriasjoomla.materia.repository.TagRepository;
@@ -67,26 +67,26 @@ public class GerarMateriaService {
 
   private final ChatGPTProperties chatGPTProperties;
 
-
-
   private final ObjectMapper objectMapper;
 
-  private PropostaMateriaDTO convetToPropostaMateriaDTO(final ChoicesDTO choice) {
+  private static final String NULL = "null";
+
+  private static final Pattern ENTER = Pattern.compile("[\n\r]");
+  private static final Pattern TAB = Pattern.compile("\t");
+
+  private PropostaMateriaDTO convetToPropostaMateriaDTO(final String mensagem) {
 
     try {
-      final String content = limparTextoJson(choice.getMessage().getContent());
+      final String content = limparTextoJson(TAB.matcher(ENTER.matcher(mensagem).replaceAll("")).replaceAll(" "));
       return objectMapper.readValue(content, PropostaMateriaDTO.class);
     } catch (final Exception e) {
-      log.log(Level.SEVERE, "Erro ao converter objeto de retorno do ChatGPT: ".concat(e.getMessage())
-          .concat(" \nConteúdo: \n\n\n").concat(choice.getMessage().getContent()), e);
-      throw new RuntimeException("Erro ao tentar processar os dados do ChatGPT", e);
+      log.log(Level.SEVERE, "Erro ao converter objeto de retorno do ChatGPT: ".concat(e.getMessage()).concat(" \nConteúdo: \n\n\n").concat(mensagem), e);
     }
-
+    return null;
   }
 
-
   @Transactional
-  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final SugerirMateriaDTO request) {
+  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final SugerirMateriaDTO request) throws Exception {
     return gerarSugestaoMateria(request, UUID.randomUUID().toString(), null);
   }
 
@@ -95,79 +95,149 @@ public class GerarMateriaService {
    *
    * @param request Parametrizaçãao das informações.
    * @return Lista de {@link PropostaMateriaDTO} com propostas de matéria.
+   * @throws Exception
    */
   @Transactional
-  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final SugerirMateriaDTO request, final String uuid,
-      final Long idMapaProcessamento) {
-
+  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final SugerirMateriaDTO request, final String uuid, final Long idMapaProcessamento)
+      throws Exception {
+    /**************************************
+     **************************************
+     *
+     * Preparando ambiente
+     * 
+     **************************************
+     **************************************
+     */
     if (isNull(request) || isNull(request.getTermos())) {
       return null;
     }
 
     final LocalDateTime inicio = LocalDateTime.now();
 
-    final String redesSociais = chatGPTProperties.getRedesSociais().stream().map(n -> n.trim().toLowerCase())
+    final String redesSociais = chatGPTProperties.getRedesSociais().stream()
+        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim())).map(n -> n.trim().toLowerCase())
         .collect(Collectors.joining(", "));
-    final String conhecimento = chatGPTProperties.getEspecialista().stream().map(n -> n.trim().toLowerCase())
+    final String conhecimento = chatGPTProperties.getEspecialista().stream()
+        .filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim())).map(n -> n.trim().toLowerCase())
         .collect(Collectors.joining(", "));
     // Pegar interesses
-    final String termos =
-
-        request.getTermos().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+    final String termos = request.getTermos().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
+        .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
 
     final String audiencias = nonNull(request.getAudiencias()) && !request.getAudiencias().isEmpty()
-        ? request.getAudiencias().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "))
-        : chatGPTProperties.getAudiencias().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+        ? request.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
+            .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "))
+        : chatGPTProperties.getAudiencias().stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
+            .map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
 
-    final String perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento,
-        chatGPTProperties.getSite(), redesSociais, audiencias, termos, request.getTema());
+    final String perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais,
+        audiencias, termos, request.getTema());
 
-    final RepostaResponseDTO itensDaMateriaRetornoGPT = chatgptService.pergunta(perguntaDadosMateria, uuid, inicio);
+    /**************************************
+     **************************************
+     *
+     * Executa pergunta dados
+     * 
+     **************************************
+     **************************************
+     */
 
-//    final List<MessageChatGPTDTO> perguntasChatGPTDTOs = new ArrayList<>();
-//    perguntasChatGPTDTOs.add(new MessageChatGPTDTO(properties.getChatgpt().getRoleUser(), perguntaDadosMateria));
-//    perguntasChatGPTDTOs.add(new MessageChatGPTDTO(itensDaMateriaRetornoGPT.getChoices().get(0).getMessage().getRole(),
-//        itensDaMateriaRetornoGPT.getChoices().get(0).getMessage().getContent()));
+    final List<String> itensDaMateriaRetornoGPT = chatgptService.perguntarAssistente(perguntaDadosMateria, uuid, inicio);
 
-    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.getChoices().stream()
-        .map(this::convetToPropostaMateriaDTO).collect(Collectors.toList());
+    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.stream().map(this::convetToPropostaMateriaDTO).filter(n -> Objects.nonNull(n))
+        .toList();
 
-    final List<String> titulosArry = new ArrayList<>();
-    propostasSemMateria.forEach(n -> {
-      titulosArry.addAll(n.getTitulos());
-      titulosArry.add(n.getTema());
-    });
-    final String titulos = titulosArry.stream().collect(Collectors.joining(", \n"));
+    PropostaMateriaDTO propostaMateriaDTO = nonNull(propostasSemMateria) && !propostasSemMateria.isEmpty()
+        ? propostasSemMateria.get(propostasSemMateria.size() - 1)
+        : null;
 
-    final String perguntaMateria = chatGPTProperties.getPrompts().getPedirMateria().formatted(conhecimento,
-        chatGPTProperties.getSite(), redesSociais, audiencias, termos, titulos);
+    if (isNull(propostaMateriaDTO)) {
+      log.info("Não conseguiu gerar a proposta de mateiria.");
+      return null;
+    }
 
-//    perguntasChatGPTDTOs.add(new MessageChatGPTDTO(properties.getChatgpt().getRoleUser(), perguntaMateria));
-    // final RepostaResponseDTO materiaRetornoGPT =
-    // chatgpt.perguntasObjeto(perguntasChatGPTDTOs, uuid, inicio);
-    final RepostaResponseDTO materiaRetornoGPT = chatgptService.pergunta(perguntaMateria, uuid, inicio);
+    final List<String> titulosArry = new ArrayList<>(propostaMateriaDTO.getTitulos());
+    titulosArry.add(propostaMateriaDTO.getTema());
 
+    final String titulos = titulosArry.stream().filter(n -> Objects.nonNull(n) && !n.isBlank() && !NULL.equalsIgnoreCase(n.trim()))
+        .collect(Collectors.joining(", \n"));
+
+    /**************************************
+     **************************************
+     *
+     * Executa pergunta matéria
+     * 
+     **************************************
+     **************************************
+     */
+
+    final String perguntaMateria = chatGPTProperties.getPrompts().getPedirMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais,
+        audiencias, termos, titulos);
+
+    String materia = null;
     final List<PropostaMateriaDTO> propostasRetorno = new ArrayList<>();
     try {
-      PropostaMateriaDTO itemSalvar;
-      for (final PropostaMateriaDTO item : propostasSemMateria) {
-        for (final ChoicesDTO choice : materiaRetornoGPT.getChoices()) {
-          if (nonNull(choice.getMessage()) && nonNull(choice.getMessage().getContent())
-              && !choice.getMessage().getContent().isBlank()
-              && nonNull(itemSalvar = convert.copy(item, uuid, textoMateria(choice.getMessage().getContent())))) {
-
-            propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
-          }
-        }
+      materia = gerarTextoMateria(perguntaMateria, uuid, inicio, 0);
+      PropostaMateriaDTO itemSalvar = propostaMateriaDTO;
+      itemSalvar = convert.copy(itemSalvar, uuid, materia);
+      if (nonNull(itemSalvar)) {
+        propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
       }
+
     } catch (final Exception e) {
       log.log(Level.SEVERE, "Erro ao gravar a Matéria".concat(e.getMessage()), e);
     }
     return propostasRetorno;
   }
 
+  /**
+   * Sistema de tentativas de gerar a materia
+   * 
+   * @param uuid
+   * @param inicio
+   * @param perguntaMateria
+   * @param tentativas      Número de tentativas
+   * @return
+   * @throws IOException
+   */
+  private String gerarTextoMateria(final String perguntaMateria, final String uuid, final LocalDateTime inicio, int tentativas) throws Exception {
+    String materia = null;
+    log.info("Gerando texto materia tentativa: " + tentativas);
+    final List<String> materiaRetornoGPT = chatgptService.perguntarAssistente(perguntaMateria, uuid, inicio);
+
+    if (nonNull(materiaRetornoGPT) && !materiaRetornoGPT.isEmpty()) {
+      // Pega o ultimo registro da array.
+      materia = textoMateria(materiaRetornoGPT.get(materiaRetornoGPT.size() - 1));
+    }
+
+    if (nonNull(materia) && !materia.isBlank() && materia.contains("#")) {
+      materia = convertMarkdownToHtml(materia);
+    }
+    if (tentativas >= 3) {
+      log.info(
+          "Motivo de não gerar a matéria: " + chatgptService.perguntarAssistente("Porque não pode gerar o texto que pedi?", uuid, inicio).get(0) + "\n\n\n");
+    }
+    // Se materia for null ele tenta 3 vezes
+
+    if (nonNull(materia)) {
+      return materia;
+    }
+    if (tentativas < 3) {
+      return gerarTextoMateria(perguntaMateria, uuid, inicio, ++tentativas);
+    }
+
+    return null;
+  }
+
+  private String convertMarkdownToHtml(String markdown) {
+    // Convert Markdown string to InputStream
+    InputStream inputStream = new ByteArrayInputStream(markdown.getBytes(StandardCharsets.UTF_8));
+
+    return Converter.convertMarkdown(inputStream, "text/html").getTextContent();
+  }
+
   @Transactional
-  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final YoutubeVideoDTO request) {
+  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final YoutubeVideoDTO request) throws Exception {
     return gerarSugestaoMateria(request, UUID.randomUUID().toString(), null);
   }
 
@@ -176,66 +246,47 @@ public class GerarMateriaService {
    *
    * @param request Parametrizaçãao das informações.
    * @return Lista de {@link PropostaMateriaDTO} com propostas de matéria.
+   * @throws Exception
    */
   @Transactional
-  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final YoutubeVideoDTO request, final String uuid,
-      final Long idMapaProcessamento) {
+  public List<PropostaMateriaDTO> gerarSugestaoMateria(@Validated final YoutubeVideoDTO request, final String uuid, final Long idMapaProcessamento)
+      throws Exception {
 
-
-
-    final LocalDateTime inicio = LocalDateTime.now();
-
-    final String redesSociais = chatGPTProperties.getRedesSociais().stream().map(n -> n.trim().toLowerCase())
-        .collect(Collectors.joining(", "));
-    final String conhecimento = chatGPTProperties.getEspecialista().stream().map(n -> n.trim().toLowerCase())
-        .collect(Collectors.joining(", "));
-    // Pegar interesses
-    final String termos = request.getTitulo().concat(", ")
-        + request.getTags().stream().map(n -> n.trim().toLowerCase())
-        .collect(Collectors.joining(", "));
-
-    final String audiencias = chatGPTProperties.getAudiencias().stream().map(n -> n.trim().toLowerCase())
-        .collect(Collectors.joining(", "));
-
-
-    final String tema = "Titulo " + request.getTitulo()
-        + (nonNull(request.getDescricao()) && !request.getDescricao().isBlank()
-            ? "\n sobre :" + removeUrls(request.getDescricao())
-            : "")
+    final var inicio = LocalDateTime.now();
+    final var redesSociais = chatGPTProperties.getRedesSociais().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+    final var conhecimento = chatGPTProperties.getEspecialista().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+    final var termos = request.getTitulo().concat(", ") + request.getTags().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+    final var audiencias = chatGPTProperties.getAudiencias().stream().map(n -> n.trim().toLowerCase()).collect(Collectors.joining(", "));
+    final var tema = "Titulo " + request.getTitulo()
+        + (nonNull(request.getDescricao()) && !request.getDescricao().isBlank() ? "\n sobre :" + removeUrls(request.getDescricao()) : "")
         + (nonNull(request.getLegenda()) && !request.getLegenda().isBlank()
             ? "\n Use essa legenda como base de informação para matéria :" + removeUrls(request.getLegenda())
             : "");
-
-    final String perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento,
-        chatGPTProperties.getSite(), redesSociais, audiencias, termos, tema);
-
-    final RepostaResponseDTO itensDaMateriaRetornoGPT = chatgptService.pergunta(perguntaDadosMateria, uuid, inicio);
-
-
-    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.getChoices().stream()
-        .map(this::convetToPropostaMateriaDTO).collect(Collectors.toList());
-
+    final var perguntaDadosMateria = chatGPTProperties.getPrompts().getPedirDadosMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais,
+        audiencias, termos, tema);
+    final List<String> itensDaMateriaRetornoGPT = chatgptService.perguntarAssistente(perguntaDadosMateria, uuid, inicio);
+    final List<PropostaMateriaDTO> propostasSemMateria = itensDaMateriaRetornoGPT.stream().map(this::convetToPropostaMateriaDTO).toList();
     final List<String> titulosArry = new ArrayList<>();
     propostasSemMateria.forEach(n -> {
       titulosArry.addAll(n.getTitulos());
       titulosArry.add(n.getTema());
     });
-    final String titulos = titulosArry.stream().collect(Collectors.joining(", \n"));
-
-    final String perguntaMateria = chatGPTProperties.getPrompts().getPedirMateria().formatted(conhecimento,
-        chatGPTProperties.getSite(), redesSociais, audiencias, termos, titulos);
-
-    final RepostaResponseDTO materiaRetornoGPT = chatgptService.pergunta(perguntaMateria, uuid, inicio);
+    final var titulos = titulosArry.stream().filter(n -> Objects.nonNull(n) && !n.isBlank()).collect(Collectors.joining(", \n"));
+    final var perguntaMateria = chatGPTProperties.getPrompts().getPedirMateria().formatted(conhecimento, chatGPTProperties.getSite(), redesSociais, audiencias,
+        termos, titulos);
 
     final List<PropostaMateriaDTO> propostasRetorno = new ArrayList<>();
+
     try {
+      final List<String> materiaRetornoGPT = chatgptService.perguntarAssistente(perguntaMateria, uuid, inicio);
       PropostaMateriaDTO itemSalvar;
       for (final PropostaMateriaDTO item : propostasSemMateria) {
-        for (final ChoicesDTO choice : materiaRetornoGPT.getChoices()) {
-          if (nonNull(choice.getMessage()) && nonNull(choice.getMessage().getContent())
-              && !choice.getMessage().getContent().isBlank()
-              && nonNull(itemSalvar = convert.copy(item, uuid, limparTexto(choice.getMessage().getContent())))) {
-            propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
+        for (final String mensagem : materiaRetornoGPT) {
+          if (nonNull(mensagem) && !mensagem.isBlank()) {
+            itemSalvar = convert.copy(item, uuid, limparTexto(mensagem));
+            if (nonNull(itemSalvar)) {
+              propostasRetorno.add(this.salvarPropostaMateria(itemSalvar, request, idMapaProcessamento));
+            }
           }
         }
       }
@@ -245,32 +296,37 @@ public class GerarMateriaService {
     return propostasRetorno;
   }
 
-  private PropostaMateriaDTO salvarPropostaMateria(final PropostaMateriaDTO in, final SugerirMateriaDTO request,
-      final Long idMapaProcessamento) {
+  private PropostaMateriaDTO salvarPropostaMateria(final PropostaMateriaDTO in, final SugerirMateriaDTO request, final Long idMapaProcessamento) {
     try {
-      final MateriaEntity materia = convert.convert(in);
+      final var materia = convert.convert(in);
       if (nonNull(request.getPublicar())) {
         materia.setPublicar(request.getPublicar());
       }
+
       materia.setTema(request.getTema());
       materia.getFaqs().forEach(n -> n.setUuid(in.getUuid()));
       // Verifica se a Tags já existe, se não da um uuid da sua crição.
       materia.setTags(materia.getTags().stream().map(n -> {
-        final Optional<TagEntity> entities = tagRepository.buscarPorApelidoTitulo(n.getApelido(), n.getTitulo());
+        final var entities = tagRepository.buscarPorApelidoTitulo(n.getApelido(), n.getTitulo());
         if (entities.isPresent()) {
           return entities.get();
         }
         n.setUuid(in.getUuid());
         return n;
-      }).collect(Collectors.toList()));
+      }).toList());
 
       if (nonNull(request.getCategoria())) {
-        final Optional<CategoriaEntity> categoria = categoriaRepository.findById(request.getCategoria());
+        final var categoria = categoriaRepository.findById(request.getCategoria());
         if (categoria.isPresent()) {
           materia.setCategoria(categoria.get());
         }
       }
+
       materia.setStatus(StatusProcessamentoEnum.PROCESSAR);
+      if (isNull(in.getMateria())) {
+        materia.setStatus(StatusProcessamentoEnum.ERRO);
+      }
+
       if (nonNull(idMapaProcessamento)) {
         materia.setPeguntaPrincipal(mapaPerguntaRepository.findById(idMapaProcessamento).get());
       }
@@ -282,22 +338,21 @@ public class GerarMateriaService {
     }
   }
 
-  private PropostaMateriaDTO salvarPropostaMateria(final PropostaMateriaDTO in, final YoutubeVideoDTO request,
-      final Long idMapaProcessamento) {
+  private PropostaMateriaDTO salvarPropostaMateria(final PropostaMateriaDTO in, final YoutubeVideoDTO request, final Long idMapaProcessamento) {
     try {
-      final MateriaEntity materia = convert.convert(in);
+      final var materia = convert.convert(in);
 
       materia.setTema(request.getTitulo());
       materia.getFaqs().forEach(n -> n.setUuid(in.getUuid()));
       // Verifica se a Tags já existe, se não da um uuid da sua crição.
       materia.setTags(materia.getTags().stream().map(n -> {
-        final Optional<TagEntity> entities = tagRepository.buscarPorApelidoTitulo(n.getApelido(), n.getTitulo());
+        final var entities = tagRepository.buscarPorApelidoTitulo(n.getApelido(), n.getTitulo());
         if (entities.isPresent()) {
           return entities.get();
         }
         n.setUuid(in.getUuid());
         return n;
-      }).collect(Collectors.toList()));
+      }).toList());
 
       materia.setStatus(StatusProcessamentoEnum.PROCESSAR);
       if (nonNull(idMapaProcessamento)) {
@@ -311,14 +366,15 @@ public class GerarMateriaService {
     }
   }
 
-  private String textoMateria (final String materia) throws IOException {
-    final String texto = limparTexto(materia);
-    for (final String item :  chatGPTProperties.getFalhas()) {
-      if(texto.trim().toLowerCase().startsWith(item.toLowerCase().trim() )) {
-        return null; 
+  private String textoMateria(final String materia) throws IOException {
+    final var texto = limparTexto(materia);
+    for (final String item : chatGPTProperties.getFalhas()) {
+      if (texto.trim().toLowerCase().startsWith(item.toLowerCase().trim())) {
+        log.info("Corpo inválido de materia : " + texto.trim());
+
+        return null;
       }
-      
-    
+
     }
     return texto;
   }
